# red-team-blue-team-agent-fabric

./: .env.example  .gitguardian.yml  .gitignore  BLUE-TEAM-PLAYBOOKS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTION_REVIEW_CHECKLIST.md  ENHANCED-RED-BLUE-TEAM-TEST-PLAN.md  EVALUATION_PROTOCOL.md  EXECUTIVE-PRESENTATION.md  LICENSE  README.md  ROADMAP.md  SECURITY_POLICY.md  SKILL.md  action.yml  agent-fabric-red-blue-team-spec.md  grafana-dashboards.json  pyproject.toml  red_team_automation.py
.github/DISCUSSION_TEMPLATE/: compliance-experience.yml  payment-protocol-security.yml
benchmarks/: README.md  __init__.py  decision_behavior_corpus.py  evaluation_results.json  evaluation_runner.py
community_modules/: MANIFEST.yaml  TEMPLATE.yaml
configs/: aiuc1_mapping.yaml  eu_ai_act_mapping.yaml  iso_42001_mapping.yaml  monthly_targets.yaml
docker/: Dockerfile.mcp  docker-compose.yml
docs/: ADVANCED.md  AIUC1-CROSSWALK.md  AIUC1-SUBMISSION-EMAIL.md  AIUC1-SUBMISSION-OUTLINE.md  AUDIT-R33-INDEPENDENT-REVIEW.md  AUROC-METHODOLOGY.md  CASE_STUDY_ENVOY_GATEWAY.md  CASE_STUDY_FALSE_PASS.md  COMPARISON.md  MODULE_CHECKLIST.md  PAYMENT-ATTACK-TAXONOMY.md  PLUGIN_SPEC.md  PRIVACY.md  QUICKSTART.md  README.md  RELATED-WORK.md  STRATEGY.md  TEST-INVENTORY.md  aiuc1-prep.md  attestation-registry.md  comparative_scanner_coverage_2026-05.md  discord-bot.md  free-scan.md  github-action.md  mcp-server.md  monthly-report.md  v3.8-roadmap.md  v3.9-roadmap.md
mcp_server/: __init__.py  __main__.py  server.py
protocol_tests/: __init__.py  _ed25519.py  _utils.py  a2a_harness.py  advanced_attacks.py  agentcore_payments_harness.py  aiuc1_compliance_harness.py  ap2_harness.py  attestation.py  attestation_registry.py  autogen_harness.py  benchmark_integrity_harness.py  capability_profile_harness.py  card_token_harness.py  cbrn_harness.py  cli.py  cloud_agent_harness.py  community_runner.py  crewai_cve_harness.py  cve_2026_25253_harness.py  enterprise_adapters.py  extended_enterprise_adapters.py  framework_adapters.py  governance_modification_harness.py  gtg1002_simulation.py  harmful_output_harness.py  http_helpers.py  identity_harness.py  incident_response_harness.py  intent_contract_harness.py  jailbreak_harness.py  kill_switch_harness.py  l402_harness.py  mcp_harness.py  mcp_supplychain.py  mcp_tool_poisoning_harness.py  mcp_tunnel_harness.py  memory_harness.py  multi_agent_harness.py  oatr_fixtures.py  (+17 more)
reports/: aiuc1-prep-2026-03-28.md  mcpstandard-dev-20260327-summary.md
schemas/: attestation-report.json
scripts/: .env.example  aiuc1_prep.py  auroc.py  behavioral_profile.py  compliance_crosswalk.py  compliance_report.py  count_tests.py  discord_scan_bot.py  evidence_pack.py  free_scan.py  fria_evidence.py  html_report.py  monthly_security_report.py  top10_failures.py  vs-r01-env.sh  vs-r02-env.sh
testing/: CRITICAL_EVALUATION.md  CRITICAL_EVALUATION_R24_2026-03-30.md  CRITICAL_EVALUATION_R25_2026-03-30.md  CRITICAL_EVALUATION_R26_2026-03-30.md  CRITICAL_EVALUATION_R27_2026-03-30.md  CRITICAL_EVALUATION_R28_2026-03-30.md  CRITICAL_EVALUATION_R29_2026-04-02.md  CRITICAL_EVALUATION_R30_2026-04-04.md  CRITICAL_EVALUATION_R31_2026-04-08.md  CRITICAL_EVALUATION_R32_2026-04-08.md  CRITICAL_EVALUATION_R33_2026-07-01.md  CRITICAL_EVALUATION_R34_2026-07-01.md  CRITICAL_EVALUATION_VS-R01_2026-05-24.md  README.md  __init__.py  mock_mcp_server.py  test_advanced_attacks_logic.py  test_autogen_harness.py  test_behavioral_profile.py  test_code_quality.py  test_ed25519.py  test_gtg1002_patterns.py  test_integration.py  test_mcp_supplychain.py  test_oatr_v120_fixtures.py  test_receipt_claim.py  test_schema_resolution.py  test_statistical.py  test_transport.py  test_trial_runner.py  test_vsr03_verdict_correctness.py  test_x402_merchant.py
tests/: test_agentcore_vsr02_regressions.py  test_auroc.py  test_fria_evidence.py  test_mcp_server_runtime.py
tests/jcs/: .gitignore  (+4 more)
(+66 files in other folders)
