[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-security-harness"
version = "4.2.0"
description = "461 security tests for AI agent systems - MCP, A2A, L402, x402 wire-protocol testing, decision governance, AIUC-1 compliance, NIST AI 800-2 aligned"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Michael K. Saleme", email = "research@cognitivethoughtengine.com"},
]
keywords = [
    "ai-security",
    "mcp",
    "a2a",
    "l402",
    "x402",
    "agent-security",
    "red-team",
    "blue-team",
    "owasp",
    "nist",
    "aiuc-1",
    "agentic-ai",
    "protocol-testing",
    "decision-governance",
    "security-testing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
mcp-server = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://github.com/msaleme/red-team-blue-team-agent-fabric"
Documentation = "https://github.com/msaleme/red-team-blue-team-agent-fabric#readme"
Repository = "https://github.com/msaleme/red-team-blue-team-agent-fabric"
Issues = "https://github.com/msaleme/red-team-blue-team-agent-fabric/issues"
Changelog = "https://github.com/msaleme/red-team-blue-team-agent-fabric/blob/main/CHANGELOG.md"
Research = "https://doi.org/10.5281/zenodo.19162104"
"PyPI" = "https://pypi.org/project/agent-security-harness/"

[project.scripts]
agent-security = "protocol_tests.cli:main"
ash = "protocol_tests.cli:main"

[tool.setuptools.packages.find]
include = ["protocol_tests*", "scripts*"]
